# nea

./: .env.example  .gitignore  Procfile  README.md  npm_test.py  pyproject.toml  start_windows.ps1
billing/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
billing/management/commands/: generate_secret_key.py  seed_branches.py  seed_master_admin.py  seed_nepali_months.py  seed_roles_and_types.py
billing/migrations/: 0001_initial.py  0002_paymentmethod.py  0002_remove_user_is_active_remove_user_is_staff_and_more.py  0003_alter_user_managers_user_is_active.py  0003_rename_address_customer_address_and_more.py  0004_remove_user_profile_picture_avatar.py  0004_role.py  0005_demandtype_employeetype.py  0005_remove_employee_employee_type_delete_employeetype.py  0006_branch_employee_delete_customer_and_more.py  0007_customer.py  0008_delete_customer.py  0009_customer.py  0010_customer_user.py  0011_remove_customer_user_remove_employee_user_and_more.py  0012_add_nepali_months.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AvatarDisplay.tsx  AvatarUpload.tsx
frontend/src/hooks/: useBranches.ts
frontend/src/pages/: Dashboard.tsx  Home.tsx  Login.tsx  index.ts
frontend/src/types/: user.ts
frontend/src/utils/: auth.ts  cache.ts  navigation.ts
nea/: asgi.py  settings.py  urls.py  wsgi.py
templates/auth/: login.html  password_reset.html
templates/dashboard/: _sidebar.html  superadmin_dashboard.html
theme/templates/: base.html  external_base.html
(+11 files in other folders)
