[project]
name = "nea"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cloudinary>=1.44.1",
    "cookiecutter>=2.6.0",
    "django>=5.2.4",
    "django-cors-headers>=4.7.0",
    "django-widget-tweaks>=1.5.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "mysqlclient>=2.2.7",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "python-magic>=0.4.27",
]

[dependency-groups]
dev = [
    "honcho>=2.0.0",
]
